Spoon Experiment finished